--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,12 +1,28 @@
+@import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
+/**/
+/*
 @font-face {
-  font-family: avenir-next-regular, sans-serif, times, serif;
-  src: url(../../assets/Font/AvenirNextLTPro-Regular.otf);
+  font-family: "Avenir LT Pro";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype");
 }
+
+@font-face {
+  font-family: "Avenir LT Pro";
+  font-weight: bold;
+  font-style: normal;
+  src: url(../../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype");
+}
+*/
 * {
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
-  font-family: avenir-next-regular, sans-serif, times, serif;
+}
+
+body {
+  font-family: "Avenir LT Pro", sans-serif;
 }
 
 .header {
@@ -18,54 +34,46 @@
   padding-bottom: 16px;
   text-align: center;
 }
-@media (min-width: 1279px) {
-  .header {
-    display: flex;
-    flex-direction: row;
-  }
-}
 .header__logo {
   width: 20px;
   height: 120px;
 }
-
-.navbar__list {
+.header .navbar__list {
   display: flex;
   flex-direction: row;
   width: 100%;
   text-align: center;
   list-style: none;
   padding: 0;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
   padding-top: 1rem;
 }
-.navbar__list--item {
+.header .navbar__list--item {
   width: 50%;
   font-weight: 400;
 }
-.navbar__list--item-underline {
+.header .navbar__list--item-underline {
   border-bottom: 4px solid #ffffff;
   font-weight: 600;
   padding-left: 0;
   margin-bottom: -16px;
 }
-
-.footer {
-  background-color: #323232;
-  color: #ffffff;
-  padding: 30px 0 20px 20px;
-  font-size: 14px;
-  line-height: 20px;
-}
-.footer__container--item .footer--heading {
-  padding-bottom: 1rem;
-}
-.footer__container--item .footer__icon:not(:first-child) {
-  display: inline-block;
-  padding: 1rem;
+@media (min-width: 1279px) {
+  .header {
+    display: flex;
+    flex-direction: row;
+  }
+  .header .header__Logo {
+    padding: 0 16px;
+  }
+  .header .navbar__list {
+    padding-top: 0;
+  }
+  .header .navbar__list--item {
+    margin-left: 32px;
+  }
+  .header .navbar__list--item-underline {
+    margin-bottom: -22px;
+  }
 }
 
 .hero {
@@ -76,37 +84,118 @@
   width: 100%;
 }
 .hero__heading {
+  font-weight: bold;
   color: #ffffff;
   line-height: 44vh;
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
+.footer {
+  background-color: #323232;
+  color: #ffffff;
+  padding-top: 2rem;
+  font-size: 14px;
+  line-height: 20px;
+}
+.footer--heading {
+  font-weight: 700;
+  font-size: 24px;
+  padding: 2rem 0 2rem 1rem;
+}
+.footer__container {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+}
+.footer__container--icon {
+  display: inline;
+  margin: 1rem;
+}
+.footer__container--contact {
+  margin: 1rem;
+}
+.footer__container--name {
+  font-weight: 600;
+}
+.footer__container--rule {
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.footer__container--email {
+  margin-top: 1rem;
+}
+.footer__logo {
+  margin: 5rem 0 1rem 1rem;
+}
+.footer__copy {
+  margin: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 1279px) {
+  .aboutt {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .about {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+@media (min-width: 1279px) {
+  .about .container {
+    display: flex;
+    flex-direction: row;
+  }
+}
 .about__heading {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  padding-top: 1rem;
+  margin-top: 2rem;
   padding-bottom: 1rem;
 }
-.about .container--img {
-  width: 100%;
-}
-.about .container-paragraph {
+.about__container {
   font-size: 0.875rem;
   line-height: 1.375rem;
 }
-.about .articale-content {
-  font-size: 0.813rem;
+.about__container--img {
+  width: 100%;
+}
+.about__container--paragraph {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 700;
+  padding-top: 1rem;
+}
+.about__container-titele {
+  padding-top: 1.5rem;
+  font-weight: 600;
+}
+.about__container--articale {
+  padding-top: 1rem;
   font-weight: 400;
 }
-.about .articale-titele {
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-}
 
-.container--img img {
+.gallery {
+  background-color: #e1e1e1;
+  margin-top: 2rem;
+}
+.gallery-heading {
+  padding-top: 1rem;
+  padding-left: 1rem;
+}
+.gallery__container {
+  padding-top: 1rem;
+}
+.gallery__container--img {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+@media (min-width: 1279px) {
+  .gallery__container--item {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2px;
+  }
 }/*# sourceMappingURL=bio.css.map */
