--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -13,6 +13,7 @@
     &__container{
         @include subheader_mobile;
         &--img{
+
             width: 100%;
         }
         &--paragraph{
@@ -32,29 +33,44 @@
     }
 
 }
+@include tablet{
+    .about__box{
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+    .container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 24px;
+    }
+}
 
-.gallery{
+.container--img img{
+    padding: 0.5rem;
+    width: 100%;
+}
+
+
+.gallery {
+    padding: 0 1rem;
     background-color: $foto-back-color;
-    margin-top: 2rem;
-  
-
     &-heading{
-        padding-top: 1rem;
+        padding: 2rem 0 0 1.5rem;
+    }
+  
+    &-heading {
+      @include header_mobile;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+    }
+  
+    @include tablet {
+      &__container--item {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding-bottom: 1rem;  
+        padding-right: 1rem;
         padding-left: 1rem;
-        
+      }
     }
-    &__container{
-        padding-top: 1rem;
-        &--img{
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          padding: 1rem;
-    }
-   
-
-
-}
-
-
-}
+  }
