--- a/styles/bio.css
+++ b/styles/bio.css
@@ -149,6 +149,13 @@ body {
     bottom: 4rem;
   }
 }
+@media (min-width: 1279px) {
+  .footer__logo {
+    position: relative;
+    bottom: 19rem;
+    left: 67rem;
+  }
+}
 .about {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -181,8 +188,8 @@ body {
 
 @media (min-width: 768px) {
   .about__box {
-    margin-left: 10rem;
-    margin-right: 10rem;
+    margin-left: 2.25rem;
+    margin-right: 2.25rem;
   }
   .container {
     display: grid;
