--- a/styles/bio.css
+++ b/styles/bio.css
@@ -55,7 +55,11 @@ body {
   border-bottom: 4px solid #ffffff;
   font-weight: 600;
   padding-left: 0;
-  margin-bottom: -16px;
+  margin-bottom: -1rem;
+}
+.header .navbar__list--item-hover:hover {
+  border-bottom: 0.2rem solid #e1e1e1;
+  margin-bottom: -2.5rem;
 }
 @media (min-width: 768px) {
   .header {
@@ -63,16 +67,16 @@ body {
     flex-direction: row;
   }
   .header .header__Logo {
-    padding: 0 16px;
+    padding: 0 1rem;
   }
   .header .navbar__list {
     padding-top: 0;
   }
   .header .navbar__list--item {
-    margin-left: 32px;
+    margin-left: 2rem;
   }
   .header .navbar__list--item-underline {
-    margin-bottom: -22px;
+    margin-bottom: -1.375rem;
   }
 }
 
@@ -160,6 +164,18 @@ body {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+@media (min-width: 768px) {
+  .about {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+}
+@media (min-width: 1279px) {
+  .about {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 .about__heading {
   margin-top: 2rem;
   padding-bottom: 1rem;
@@ -194,7 +210,14 @@ body {
   .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
+    gap: 2rem;
+  }
+}
+@media (min-width: 1279px) {
+  .about__box {
+    margin: auto;
+    width: 63vw;
+    height: 100%;
   }
 }
 .container--img img {
@@ -205,6 +228,18 @@ body {
 .gallery {
   padding: 0 1rem;
   background-color: #e1e1e1;
+}
+@media (min-width: 768px) {
+  .gallery {
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
+  }
+}
+@media (min-width: 1279px) {
+  .gallery {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .gallery-heading {
   padding: 2rem 0 0 1.5rem;
