--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -84,9 +84,9 @@
 }
 @include tablet{
     .about__box{
-        margin-left: 2.25rem;
-        margin-right: 2.25rem;
-        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 60vw;
     }
     .container{
         display: grid;
