--- a/styles/bio.css
+++ b/styles/bio.css
@@ -50,12 +50,17 @@ body {
 .header .navbar__list--item {
   width: 50%;
   font-weight: 400;
+  color: #ffffff;
+}
+.header .navbar__list--item a {
+  color: #ffffff;
 }
 .header .navbar__list--item-underline {
   border-bottom: 4px solid #ffffff;
   font-weight: 600;
   padding-left: 0;
   margin-bottom: -1rem;
+  color: #ffffff;
 }
 .header .navbar__list--item-hover:hover {
   border-bottom: 0.2rem solid #e1e1e1;
@@ -324,9 +329,9 @@ body {
 
 @media (min-width: 768px) {
   .about__box {
-    margin-left: 2.25rem;
-    margin-right: 2.25rem;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60vw;
   }
   .container {
     display: grid;
