--- a/styles/bio.css
+++ b/styles/bio.css
@@ -137,17 +137,22 @@ body {
   }
 }
 .footer__container {
+  margin-left: 1rem;
   font-size: 0.813rem;
   line-height: 1.125rem;
 }
 @media (min-width: 768px) {
   .footer__container {
+    margin-left: 2.25rem;
+    margin-right: 2.25rem;
     font-size: 0.875rem;
     line-height: 1, 25rem;
   }
 }
 @media (min-width: 1279px) {
   .footer__container {
+    margin-left: 2.25rem;
+    margin-right: 2.25rem;
     font-size: 0.875rem;
     line-height: 1, 25rem;
   }
@@ -200,6 +205,39 @@ body {
     left: 67rem;
   }
 }
+.form__container {
+  width: 100%;
+  padding: 0.75rem;
+  display: flex;
+  flex-direction: column;
+}
+.form__container .container__name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.form__container .container__name--img {
+  padding-right: 4px;
+}
+
+.name-box {
+  border-radius: 4px;
+  width: 100%;
+  height: 36px;
+}
+
+.msg-box {
+  border-radius: 4px;
+  width: 100%;
+  height: 38px;
+}
+
+.img {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+}
+
 .about {
   padding-left: 1rem;
   padding-right: 1rem;
