--- a/styles/bio.css
+++ b/styles/bio.css
@@ -419,7 +419,7 @@ body {
 
 .container__comment .label {
   padding-left: 2.2rem;
-  color: #e1e1e1;
+  color: #afafaf;
 }
 .container__comment--name {
   display: flex;
@@ -516,6 +516,7 @@ body {
   }
 }
 .feedback__container--header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -532,7 +533,7 @@ body {
   font-weight: 600;
 }
 .feedback__container--header .feedback__header--date {
-  color: #e1e1e1;
+  color: #afafaf;
 }
 .feedback__container--header .feedback__text {
   font-weight: 300;
