--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -192,7 +192,7 @@
 .container__comment{
     .label{
         padding-left: 2.2rem;
-        color: $form-bcolor;
+        color: $silver;
     }
     &--name{
         @include flex;
@@ -287,6 +287,7 @@
             background-color: $foto-back-color;
         }
         &--header{
+            width: 100%;
             display: flex;
             flex-direction: column;
             align-content: center;
@@ -301,7 +302,7 @@
                     font-weight: 600;
                 }
                 &--date{
-                    color: $foto-back-color;
+                    color: $silver;
                 }
             }
             .feedback__text{
